Added Fare Calculation